# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py
labels/templates/labels/: delete_label.html  label_confirm_delete.html  label_create.html  label_form.html  label_list.html  label_update.html  label_update_form.html  labels_list.html
mainpage/: forms.py  tests.py  urls.py  views.py
mainpage/templates/mainpage/: delete_user.html  home_page.html  login.html  main_template.html  user_update_form.html  users_create.html  users_list.html
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py  0002_auto_20210412_2234.py
statuses/templates/statuses/: delete_status.html  status_confirm_delete.html  status_form.html  status_list.html  status_update.html  status_update_form.html  statuses_create.html  statuses_list.html
task_manager/: ..env.swp  .set.swp  .vie.swp  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/static/css/: bootstrap.min.css.save
tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_auto_20210418_1828.py
users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
(+19 files in other folders)
